php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #43074 structure has no member named `refcount'
Submitted: 2007-10-23 06:41 UTC Modified: 2007-10-23 15:21 UTC
From: glen at delfi dot ee Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.3CVS-2007-10-23 (snap) OS: PLD Linux
Private report: No CVE-ID: None
 [2007-10-23 06:41 UTC] glen at delfi dot ee
Description:
------------
/home/glen/rpm/pld/BUILD/php5.3-200710230430/ext/sybase_ct/php_sybase_ct.c: 
In function `php_sybase_fetch_hash':
/home/glen/rpm/pld/BUILD/php5.3-200710230430/ext/sybase_ct/php_sybase_ct.c:1802: 
error: structure has no member named `refcount'



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-10-23 15:21 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC