Fixed bug #43074 (attempt to increment refcount outside of the macro)